--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
         "cordova-custom-config": "5.1.0",
         "cordova-plugin-splashscreen": "5.0.2",
         "cordova-plugin-whitelist": "1.3.3",
-        "monaca-plugin-monaca-core": "3.2.1"
+        "monaca-plugin-monaca-core": "3.2.1",
+        "phonegap-plugin-barcodescanner": "8.1.0",
+        "cordova-plugin-vibration": "3.1.0",
+        "cordova-plugin-dialogs": "2.0.1"
     },
     "cordova": {
         "plugins": {
             "cordova-custom-config": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-whitelist": {},
-            "monaca-plugin-monaca-core": {}
+            "monaca-plugin-monaca-core": {},
+            "phonegap-plugin-barcodescanner": {},
+            "cordova-plugin-vibration": {},
+            "cordova-plugin-dialogs": {}
         }
     },
     "scripts": {
